RESOLVED FIXED137262
REGRESSION (r173423): [iOS] Sites with EV certificates appear as normal HTTPS sites
https://bugs.webkit.org/show_bug.cgi?id=137262
Summary REGRESSION (r173423): [iOS] Sites with EV certificates appear as normal HTTPS...
mitz
Reported 2014-09-30 13:33:20 PDT
<rdar://problem/18503318> When navigating to the a website that has an EV certificate, the browser UI doesn’t reflect the EV status of the site. This is happening because after <http://trac.webkit.org/r173423> (and its build fixes), ResourceResponse::platformCertificateInfo() in ResourceResponseCFNet.cpp returns an empty CertificateInfo.
Attachments
Return a CertificateInfo initialized Return a CertificateInfo initialized (1.59 KB, patch)
2014-09-30 13:38 PDT, mitz
koivisto: review+
mitz
Comment 1 2014-09-30 13:38:05 PDT
Created attachment 238952 [details] Return a CertificateInfo initialized Return a CertificateInfo initialized
mitz
Comment 2 2014-10-01 07:31:50 PDT
Darin Adler
Comment 3 2014-10-01 08:06:20 PDT
Comment on attachment 238952 [details] Return a CertificateInfo initialized Return a CertificateInfo initialized View in context: https://bugs.webkit.org/attachment.cgi?id=238952&action=review > Source/WebCore/platform/network/cf/ResourceResponseCFNet.cpp:122 > +#endif > return CertificateInfo(); #else?
Csaba Osztrogonác
Comment 4 2014-10-01 09:15:15 PDT
(In reply to comment #2) > Fixed in <http://trac.webkit.org/r174156>. It broke the Apple Windows build: 1>..\platform\network\cf\ResourceResponseCFNet.cpp(33): fatal error C1083: Cannot open include file: 'WebCoreSystemInterface.h': No such file or directory 1>Done Building Project "C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\WebCore.vcxproj\WebCore.vcxproj" (Build target(s)) -- FAILED.
mitz
Comment 5 2014-10-01 09:17:35 PDT
(In reply to comment #4) > (In reply to comment #2) > > Fixed in <http://trac.webkit.org/r174156>. > > It broke the Apple Windows build: > > 1>..\platform\network\cf\ResourceResponseCFNet.cpp(33): fatal error C1083: Cannot open include file: 'WebCoreSystemInterface.h': No such file or directory > 1>Done Building Project "C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\WebCore.vcxproj\WebCore.vcxproj" (Build target(s)) -- FAILED. Committed a build fix in <http://trac.webkit.org/r174157>.
mitz
Comment 6 2014-10-01 09:17:35 PDT
(In reply to comment #4) > (In reply to comment #2) > > Fixed in <http://trac.webkit.org/r174156>. > > It broke the Apple Windows build: > > 1>..\platform\network\cf\ResourceResponseCFNet.cpp(33): fatal error C1083: Cannot open include file: 'WebCoreSystemInterface.h': No such file or directory > 1>Done Building Project "C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\WebCore.vcxproj\WebCore.vcxproj" (Build target(s)) -- FAILED. Committed a build fix in <http://trac.webkit.org/r174157>.
Note You need to log in before you can comment on or make changes to this bug.