REGRESSION (r173423): [iOS] Sites with EV certificates appear as normal HTTPS sites https://bugs.webkit.org/show_bug.cgi?id=137262

Reviewed by Antti Koivisto.

No new tests, because the API test harness doesn’t run an HTTP server to test against.

* platform/network/cf/ResourceResponseCFNet.cpp:
(WebCore::ResourceResponse::platformCertificateInfo): Return a CertificateInfo initialized
with the certificate array from the response.



Canonical link: https://commits.webkit.org/155088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174156 268f45cc-cd09-0410-ab3c-d52691b4dbfc